speech-tools (1:2.1~release-4) UNRELEASED; urgency=low

  * control: Bump Standards-Version to 3.9.3 (no changes).

 -- Samuel Thibault <sthibault@debian.org>  Sat, 25 Feb 2012 18:00:02 +0100

speech-tools (1:2.1~release-3) unstable; urgency=low

  [ Samuel Thibault ]
  * control: Depend on hardening-check.
  * rules: Set DEB_BUILD_HARDENING=1 to enable hardening.
  * patches/fmt.diff: Fix format security issue.

  [ Peter Drysdale ]
  * compat: bump to debhelper 8
  * Move to dh style minimum format for rules.
  * Move to source format 3.0 quilt.
  * Refresh contexts, clean up some patches, and del. obs. uncompiled patches
  * Provide individual patch headers and remove misleading
    uniform headers about patching for GCC (Closes: #616341)
  * Clean build system and drop obsolete compiler patches.

 -- Peter Drysdale <drysdalepete@gmail.com>  Tue, 13 Dec 2011 17:22:52 +1000

speech-tools (1:2.1~release-2.1) unstable; urgency=low

  * New maintainer (closes: #637820)

 -- Jean-Philippe MENGUAL <texou@accelibreinfo.eu>  Tue, 16 Aug 2011 02:19:25 +0200

speech-tools (1:2.1~release-2) unstable; urgency=low

  * Make libestools2.1-dev provide libestools2.0-dev, so that binNMUs can
    be facilitated.
  * Add missing copyright entries.

 -- Kumar Appaiah <akumar@debian.org>  Thu, 24 Feb 2011 09:57:35 -0600

speech-tools (1:2.1~release-1) unstable; urgency=low

  * New upstream release
  * Bump soname; shlibs etc. updated
  * Update patches and rules file to handle symlinks with just x.y
    versioning as opposed to x.y.z by appropriately ignoring the absence
    of the minor version number. Also fix major version detection in
    debian/get_version.sh.
  * Update watch file to handle "release" in version number

 -- Kumar Appaiah <akumar@debian.org>  Wed, 16 Feb 2011 20:53:04 -0600

speech-tools (1:2.0.95~beta-2) unstable; urgency=low

  * Update speech_class_EST_WaveFile.cc.diff to fix audsp related
    crashes. (Closes: #601294)